--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,12 @@ main {
 section {
     margin-bottom: 2rem;
 }
+.imges {
+    margin: 1rem 5rem;
+}
+.imges img {
+    width: 48%;
+}
 
 #about p, #how-it-works p {
     margin: 1rem 0;
@@ -38,8 +44,12 @@ section {
 #products {
     display: flex;
     flex-wrap: wrap;
-    gap: 1rem;
+    gap: 0.5rem;
     justify-content: space-around;
+}
+.product img {
+    width: 100%;
+    display: block;
 }
 
 .product {
@@ -47,7 +57,7 @@ section {
     border: 1px solid #ddd;
     padding: 1rem;
     text-align: center;
-    width: calc(33% - 2rem);
+    width: calc(32% - 2rem);
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
 }
 
@@ -90,7 +100,6 @@ footer {
     header h1 {
         font-size: 2rem;
     }
-    
     .product {
         width: calc(70% - 2rem);
     }
@@ -100,5 +109,10 @@ footer {
     #testimonials {
         margin-bottom: 9rem;
     }
-    
+    .imges {
+        margin: 1rem 2rem;
+    }
+    .imges img {
+        width: 100%;
+    }
 }
